# python-project-52

./: .env.test  .gitignore  Makefile  README.md  build.sh  conftest.py  coverage.xml  pyproject.toml  pytest.ini  render.yaml  sonar-project.properties
.scannerwork/: report-task.txt
.scannerwork/architecture/py/: labels-__init___py.udg  labels-admin_py.udg  labels-apps_py.udg  labels-forms_py.udg  labels-models_py.udg  labels-tests_py.udg  (+36 more)
labels/: conftest.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_name.py
statuses/: conftest.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/: settings.py  urls.py
tasks/: conftest.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_name.py
templates/: auth_base.html  base.html
templates/labels/: label_create.html  label_delete.html  label_form.html  label_update.html  labels.html
templates/registration/: login.html
templates/statuses/: status_create.html  status_delete.html  status_form.html  status_update.html  statuses.html
templates/tasks/: task_create.html  task_delete.html  task_detail.html  task_form.html  task_update.html  tasks.html
templates/users/: create_user.html  user_delete.html  user_form.html  user_profile.html  user_update.html  users.html
tests/: base.py  test_statuses.py  test_task_filters.py  test_tasks.py  test_users.py  tests_labels.py
users/: forms.py  models.py  tests.py  urls.py  views.py
(+434 files in other folders)
