[project]
name = "hexlet-code"
version = "0.1.0"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.1",
    "drf-yasg>=1.21.14",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["task_manager"]
